grid/01-grid-layout-1/style.css
:root {
  box-sizing: content-box;
}

body, html {
  height: 100%;
  margin: 0;
}

.container {
  text-align: center;
  height: 100%;
  padding: 16px;
  box-sizing: border-box;
  display: grid;
  grid-template: 1fr 1fr 5fr 1fr / 1fr 3fr;
  grid-template-areas: 
    'header header '
    'sidebar nav '
    'sidebar article '
    'footer footer ';
  gap: 15px;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
  border-radius: 15px;
}

.header {
  background-color: #FFDE22;
  grid-area: header;
}

.sidebar {
  background-color: #FF7755;
  grid-area: sidebar;
}

.nav {
  background-color: #00DDFF;
  grid-area: nav;
}

.article {
  background-color: #bccbde;
  grid-area: article;
  overflow: auto;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.footer {
  background-color: #393f4d;
  grid-area: footer;
}

